# aws-coding-agent

./: .bedrock_agentcore.yaml.template  .env.example  .gitignore  .mcp.json  AGENTCORE_DEPLOYMENT_STATUS.md  CHEATSHEET.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  QUICKSTART.md  README.md  START_HERE.md  draft.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: README.md  TEMPLATE.md  bedrock-agentcore-cli.md
claudedocs/: architecture-review.md  aws-mcp-tools-summary.md  corrected-oauth-setup.py  dependency-graph.md  quick-fixes.md
docs/: AGENTCORE_DEPLOYMENT_PATTERNS.md  AGENTCORE_OAUTH_INTEGRATION.md  AGENTCORE_RUNTIME_INTEGRATION.md  AGENTCORE_SESSION_MANAGEMENT.md  AGENT_DEVELOPMENT_GUIDE.md  AUTHENTICATION.md  CHEATSHEET.md  CLEANUP.md  COMMANDS.md  COMMANDS_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_MAP.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_STATUS.md  QUICK_START.md
docs/archive/: FIXES_APPLIED-old.md  README.md  agentcore-gateway-oauth-setup.md  implementation-workflow.md  incremental-testing-strategy.md  quick-start-guide-old.md
scripts/: deploy.sh  test-runtime.sh
src/: __init__.py  config.py  main.py  runtime.py
src/agent/: create_agent.py  runtime.py
src/auth/: github_auth.py  setup_provider.py
src/chat/: session.py  stream_handler.py
src/constants/: __init__.py  messages.py  prompts.py
src/gateway/: __init__.py  agentcore.py  interface.py
src/models/: chat.py  plan.py  status.py
src/prompts/: templates.py
src/tools/: _github_api.py  github_tools.py  github_tools_hybrid.py
src/utils/: __init__.py  helpers.py  (+2 more)
tests/: README.md  conftest.py  test_agentcore_basics.py  test_agentcore_conversation.py  test_agentcore_oauth.py  test_agentcore_runtime.py  test_config.py  test_logging.py  test_models.py  test_prompts.py  test_session.py
(+2 files in other folders)
